johnlimadev/force-app/main/default/objects/LogCPF__c/LogCPF__c.object-meta.xml
<CustomObject>
    <label>LogCPF</label>
    <nameField>
        <label>LogCPF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LogCPFs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>