johnlimadev/force-app/main/default/objects/LogCPF__c/fields/CPF_Anterior__c.field-meta.xml
<CustomField>
    <fullName>CPF_Anterior__c</fullName>
    <label>CPF Anterior</label>
    <length>15</length>
    <type>Text</type>
</CustomField>