johnlimadev/force-app/main/default/objects/LogCPF__c/fields/CPF_Corrente__c.field-meta.xml
<CustomField>
    <fullName>CPF_Corrente__c</fullName>
    <label>CPF Corrente</label>
    <length>15</length>
    <type>Text</type>
</CustomField>