johnlimadev/force-app/main/default/objects/LogCPF__c/listViews/Best_View.listView-meta.xml
<ListView>
    <fullName>Best_View</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>CPF_Corrente__c</columns>
    <columns>CPF_Anterior__c</columns>
    <filterScope>Mine</filterScope>
    <label>Best View</label>
</ListView>